@@ -46,6 +46,9 @@
 		03D881090F8DB0BB0087D071 /* OCMObserverRecorder.h in Headers */ = {isa = PBXBuildFile; fileRef = 03D881070F8DB0BB0087D071 /* OCMObserverRecorder.h */; };
 		03D8815B0F8DB37B0087D071 /* OCMObserverRecorder.m in Sources */ = {isa = PBXBuildFile; fileRef = 03D8815A0F8DB37B0087D071 /* OCMObserverRecorder.m */; };
 		03D8815C0F8DB37B0087D071 /* OCMObserverRecorder.m in Sources */ = {isa = PBXBuildFile; fileRef = 03D8815A0F8DB37B0087D071 /* OCMObserverRecorder.m */; };
+		03D8822F0FA151E20087D071 /* OCPartialMockObject.h in Headers */ = {isa = PBXBuildFile; fileRef = 03D8822D0FA151E10087D071 /* OCPartialMockObject.h */; };
+		03D882300FA151E20087D071 /* OCPartialMockObject.m in Sources */ = {isa = PBXBuildFile; fileRef = 03D8822E0FA151E20087D071 /* OCPartialMockObject.m */; };
+		03D882310FA151E20087D071 /* OCPartialMockObject.m in Sources */ = {isa = PBXBuildFile; fileRef = 03D8822E0FA151E20087D071 /* OCPartialMockObject.m */; };
 		03DE1F5806DB911300E5A2A8 /* OCMockObject.h in Headers */ = {isa = PBXBuildFile; fileRef = 03DE1F5406DB911300E5A2A8 /* OCMockObject.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		03DE1F5906DB911300E5A2A8 /* OCMockObject.m in Sources */ = {isa = PBXBuildFile; fileRef = 03DE1F5506DB911300E5A2A8 /* OCMockObject.m */; };
 		03DE1F5A06DB911300E5A2A8 /* OCMockRecorder.h in Headers */ = {isa = PBXBuildFile; fileRef = 03DE1F5606DB911300E5A2A8 /* OCMockRecorder.h */; settings = {ATTRIBUTES = (Public, ); }; };
@@ -100,6 +103,8 @@
 		03D880D40F8DA4750087D071 /* NSNotificationCenter+OCMAdditions.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = "NSNotificationCenter+OCMAdditions.m"; sourceTree = "<group>"; };
 		03D881070F8DB0BB0087D071 /* OCMObserverRecorder.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = OCMObserverRecorder.h; sourceTree = "<group>"; };
 		03D8815A0F8DB37B0087D071 /* OCMObserverRecorder.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = OCMObserverRecorder.m; sourceTree = "<group>"; };
+		03D8822D0FA151E10087D071 /* OCPartialMockObject.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = OCPartialMockObject.h; sourceTree = "<group>"; };
+		03D8822E0FA151E20087D071 /* OCPartialMockObject.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = OCPartialMockObject.m; sourceTree = "<group>"; };
 		03DE1F5406DB911300E5A2A8 /* OCMockObject.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; path = OCMockObject.h; sourceTree = "<group>"; };
 		03DE1F5506DB911300E5A2A8 /* OCMockObject.m */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.objc; path = OCMockObject.m; sourceTree = "<group>"; };
 		03DE1F5606DB911300E5A2A8 /* OCMockRecorder.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; path = OCMockRecorder.h; sourceTree = "<group>"; };
@@ -218,6 +223,8 @@
 				0338A99707BE7C100066DE8A /* OCClassMockObject.m */,
 				0338A9EE07BE83B50066DE8A /* OCProtocolMockObject.h */,
 				0338A9EF07BE83B50066DE8A /* OCProtocolMockObject.m */,
+				03D8822D0FA151E10087D071 /* OCPartialMockObject.h */,
+				03D8822E0FA151E20087D071 /* OCPartialMockObject.m */,
 				03DE1F5606DB911300E5A2A8 /* OCMockRecorder.h */,
 				03DE1F5706DB911300E5A2A8 /* OCMockRecorder.m */,
 				03D8805E0F8C81DE0087D071 /* OCObserverMockObject.h */,
@@ -285,6 +292,7 @@
 				03D880610F8C81DE0087D071 /* OCObserverMockObject.h in Headers */,
 				03D880D50F8DA4750087D071 /* NSNotificationCenter+OCMAdditions.h in Headers */,
 				03D881090F8DB0BB0087D071 /* OCMObserverRecorder.h in Headers */,
+				03D8822F0FA151E20087D071 /* OCPartialMockObject.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -429,6 +437,7 @@
 				03D880700F8C84560087D071 /* NSInvocation+OCMAdditions.m in Sources */,
 				03D880D70F8DA4750087D071 /* NSNotificationCenter+OCMAdditions.m in Sources */,
 				03D8815C0F8DB37B0087D071 /* OCMObserverRecorder.m in Sources */,
+				03D882310FA151E20087D071 /* OCPartialMockObject.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -447,6 +456,7 @@
 				03D880620F8C81DE0087D071 /* OCObserverMockObject.m in Sources */,
 				03D880D60F8DA4750087D071 /* NSNotificationCenter+OCMAdditions.m in Sources */,
 				03D8815B0F8DB37B0087D071 /* OCMObserverRecorder.m in Sources */,
+				03D882300FA151E20087D071 /* OCPartialMockObject.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
